<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF923E"
    tools:context=".RegisterActivity"
    android:baselineAligned="false">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="120dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/dp"
                android:contentDescription="@string/todo" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rb1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />


        <Button
            android:id="@+id/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/orange"
            android:text="@string/enter_student_details"
            app:layout_constraintBottom_toTopOf="@+id/logout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:paddingEnd="-50dp"
        tools:ignore="RtlSymmetry">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#EAE7E7"
            app:cardCornerRadius="50dp"
            >
            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingEnd="-150dp"
                >


                <TextView
                    android:layout_marginTop="50dp"
                    android:id="@+id/student_details"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_the_student_individual_details"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="210dp"/>
                <ScrollView
                    android:id="@+id/sv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="200dp"
                        android:paddingHorizontal="10dp">


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/f_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            app:hintTextColor="@color/blue"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/l_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            app:hintTextColor="@color/blue"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                />

                        </com.google.android.material.textfield.TextInputLayout>



                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/roll"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/student_roll_number"
                            app:hintTextColor="@color/blue"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                />

                        </com.google.android.material.textfield.TextInputLayout>



                        <Spinner
                            android:id="@+id/student_type"
                            android:background="@color/white"
                            android:paddingStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="RtlSymmetry" />

                        <Spinner
                            android:id="@+id/gender"
                            android:background="@color/white"
                            android:paddingStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="RtlSymmetry" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/aadhar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/aadhar_number"
                            app:hintTextColor="@color/blue"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                />

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/student_email"
                            app:hintTextColor="@color/blue"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/student_phone_number"
                            app:hintTextColor="@color/blue"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/branch1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/student_branch"
                            app:hintTextColor="@color/blue"
                            android:textColorHint="@color/black"
                            app:boxBackgroundColor="@color/white"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                            <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                />

                        </com.google.android.material.textfield.TextInputLayout>


                        <Spinner
                            android:id="@+id/branch_type"
                            android:background="@color/white"
                            android:paddingStart="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:ignore="RtlSymmetry" />

                        <Button
                            android:id="@+id/rb2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register"
                            android:backgroundTint="@color/orange"
                            android:layout_gravity="center_horizontal"
                            />

                    </LinearLayout>
                </ScrollView>


            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>